force-app/main/default/objects/Install_Item__c/Install_Item__c.object-meta.xml
<CustomObject>
    <label>Install Item</label>
    <nameField>
        <label>Install Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>