force-app/main/default/objects/Install_Item__c/fields/Appoved_By__c.field-meta.xml
<CustomField>
    <fullName>Appoved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appoved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Install_Items</relationshipName>
    <type>Lookup</type>
</CustomField>