force-app/main/default/objects/Install_Item__c/fields/Bid_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Bid_Amounts__c</fullName>
    <label>Bid Amounts</label>
    <summarizedField>Invoice__c.Bid_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Install_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>