force-app/main/default/objects/Install_Item__c/fields/Bid_Approved__c.field-meta.xml
<CustomField>
    <fullName>Bid_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Approved</label>
    <type>Checkbox</type>
</CustomField>