force-app/main/default/objects/Install_Item__c/fields/Business_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Business_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Accounts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business Accounts</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Install Items</relationshipLabel>
    <relationshipName>Install_Items</relationshipName>
    <type>Lookup</type>
</CustomField>