force-app/main/default/objects/Install_Item__c/fields/bypass_PB__c.field-meta.xml
<CustomField>
    <fullName>bypass_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bypass PB</label>
    <type>Checkbox</type>
</CustomField>