force-app/main/default/objects/Install_Item__c/fields/Install_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Install_Item_Status__c</fullName>
    <defaultValue>&quot;In Process&quot;</defaultValue>
    <label>Install Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>