force-app/main/default/objects/Install_Item__c/fields/Invoiced_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amounts__c</fullName>
    <label>Invoiced Amounts</label>
    <summarizedField>Invoice__c.Invoiced_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Install_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>