force-app/main/default/objects/Install_Item__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Install Items</relationshipLabel>
    <relationshipName>Install_Items</relationshipName>
    <type>Lookup</type>
</CustomField>