force-app/main/default/objects/Install_Item__c/fields/Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business Accounts</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Install Items (Sub-Contractor)</relationshipLabel>
    <relationshipName>Install_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>